fixed newlines in html creating extra space

--- a/assets/css/b98/b98.css
+++ b/assets/css/b98/b98.css
@@ -72,6 +72,7 @@
 
 #bf-controls {
     padding-bottom: 12px;
+    font-size: 0;
 }
 
 #bf-controls button {
